<resources>
    <string name="app_name" translatable="false">Passage Weather</string>

    <string name="map_icon_description">Area map icon</string>

    <string name="welcome_message">Please, choose a region!</string>

    <string name="share_map">Share map to...</string>
    <string name="share_maps_dialog_title">What maps would you like to share?</string>
    <string name="cancel">Cancel</string>

    /* Shared preferences */
    <string name="app_settings">Settings</string>
    <string name="running_first_time_key" translatable="false">running_first_time</string>
    <string name="sp_auto_download_title">Allow automatic downloads</string>
    <string name="sp_auto_download_key" translatable="false">auto_download</string>
    <string name="pc_variable_key" translatable="false">variable_category</string>
    <string name="pc_variable_title">Variables</string>
    <string name="mp_wind_key" translatable="false">wind</string>

    /* Menu items */
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="wind">Wind</string>
    <string name="gfs">Wind (GFS)</string>
    <string name="coamps">Wind (COAMPS)</string>
    <string name="wrf">Wind (WRF)</string>
    <string name="nam">Wind (NAM)</string>
    <string name="pressure">Surface Pressure</string>
    <string name="waves">Waves</string>
    <string name="visibility">Visibility</string>
    <string name="precipitation">Precipitation</string>
    <string name="clouds">Cloud Cover</string>
    <string name="gulfstream">Gulf Stream</string>

    <string name="med">Mediterranean</string>
    <string name="west">West Indies</string>
    <string name="natl">North Atlantic</string>
    <string name="satl">South Atlantic</string>
    <string name="npac">North Pacific</string>
    <string name="spac">South Pacific</string>
    <string name="ioce">Indian Ocean</string>
    <string name="rr">Races and Regattas</string>

    <string name="meds">Mediterranean Sea</string>
    <string name="westmed">Western Mediterranean</string>
    <string name="ctlmed">Central Mediterranean</string>
    <string name="eastmed">Eastern Mediterranean</string>
    <string name="blksea">Black Sea</string>
    <string name="adriatic">Adriatic and Aegean</string>
    <string name="straitgbt">Strait of Gibraltar</string>
    <string name="baleares">Balearic Islands</string>
    <string name="ligurians">Ligurian Sea</string>
    <string name="corsar">Corsica and Sardinia</string>
    <string name="straitbfc">Strait of Bonifacio</string>
    <string name="smalta">Sicily and Malta</string>

    <string name="bertoind">Bermuda to W. Indies</string>
    <string name="sflorida">South Florida</string>
    <string name="flortoind">Florida to West Indies</string>
    <string name="gulfmex">Gulf of Mexico</string>
    <string name="caribsea">Caribbean Sea</string>
    <string name="virgtodom">Virgin Islands to Dominica</string>
    <string name="leeward">Leeward Islands</string>
    <string name="windw">Windward Islands</string>
    <string name="appnma">Approaches to Panama</string>

    <string name="natlantic">North Atlantic Ocean</string>
    <string name="tropatlantic">Tropical Atlantic Ocean</string>
    <string name="transatlantic">No. Transatlantic</string>
    <string name="stransat">So. Transatlantic</string>
    <string name="medtocarib">Med to Caribbean</string>
    <string name="azores"> Azores to Med</string>
    <string name="neurope">No. Europe to Iceland</string>
    <string name="baltic">Baltic Sea</string>
    <string name="northsea">North Sea</string>
    <string name="britisles">British Isles</string>
    <string name="IreltoEngl">Ireland to Eng. Channel</string>
    <string name="engchannel">English Channel</string>
    <string name="biscay">Bay of Biscay</string>
    <string name="gibraltar">Portugal to Gibraltar</string>
    <string name="canary">Canary Islands</string>
    <string name="labrador">Labrador and Greenland</string>
    <string name="novascotia">N. Scotia and Newfoundland</string>
    <string name="newengland">New England</string>
    <string name="chesdel">Chesapeake and Delaware</string>
    <string name="hatteras">Cape Hatteras to Florida</string>
    <string name="nportober">Newport to Bermuda</string>
    <string name="sflor">South Florida</string>
    <string name="greatlks">Great Lakes</string>

    <string name="lsup">Lake Superior</string>
    <string name="lmichigan">Lake Michingan and Huron</string>
    <string name="lontario">Lake Ontario and Erie</string>

    <string name="satlantic">South Atlantic Ocean</string>
    <string name="atlantocean">Tropical Atlantic Ocean</string>
    <string name="caperj">Cape Town to Rio de Janeiro</string>
    <string name="bario">B. Aires to Rio de Janiero</string>
    <string name="drakepass">Drake Passage</string>
    <string name="safrictoseyc">So. Africa to Seychelles</string>

    <string name="npacific">North Pacific Ocean</string>
    <string name="alaska">Gulf of Alaska</string>
    <string name="caltohaw">California to Hawaii</string>
    <string name="hawaii">Hawaii</string>
    <string name="usawest">USA West Coast</string>
    <string name="straitjf">Strait of Juan de Fuca</string>
    <string name="socal">Southern California</string>
    <string name="mex">California to Mexico</string>
    <string name="baja">Baja California</string>
    <string name="mextopan">Mexico to Panama</string>
    <string name="pantogala">Panama to the Galapagos</string>
    <string name="amertopol">N. America to Polynesia</string>
    <string name="japan">Sea of Japan</string>
    <string name="micronesia">Japan to Micronesia</string>
    <string name="malacca">Strait of Malacca</string>
    <string name="chinasea">South China Sea</string>

    <string name="spacific">South Pacific Ocean</string>
    <string name="oceania">Oceania</string>
    <string name="fijtomarq">Fiji to the Marquesas</string>
    <string name="austcoral">NE Australia and Coral Sea</string>
    <string name="seaust">Southeast Australia</string>
    <string name="swaust">Southwest Australia</string>
    <string name="tasman">Tasman Sea</string>
    <string name="newzealand">New Zealand</string>

    <string name="indian">No. Indian Ocean</string>
    <string name="sindian">So. Indian Ocean</string>
    <string name="safrica">So. Africa to Seychelles</string>
    <string name="arabian">Red and Arabian Seas</string>
    <string name="leeuwin">Southwest Australia</string>

    <string name="atlantr">Atlantic Rally (ARC)</string>
    <string name="cabosl">Cabo San Lucas Race</string>
    <string name="rjrc">Cape to Rio Race</string>
    <string name="chinarc">China Sea Race</string>
    <string name="giragliarc">Giraglia Race</string>
    <string name="bermudarc">Marion-Bermuda Race</string>
    <string name="middlerc">Middle Sea Race</string>
    <string name="montegorc">Montego Bay Race</string>
    <string name="npbermudarc">Newport Bermuda Race</string>
    <string name="paccup">Pacific Cup</string>
    <string name="fastnetrc">Rolex Fastnet Race</string>
    <string name="caribrc">RORC Caribbean 600</string>
    <string name="transatrc">RORC Transatlantic Race</string>
    <string name="sydneyrc">Sydney Hobart Race</string>
    <string name="transatlantrc">Transatlantic Race</string>
    <string name="transparc">Transpac Race</string>

    <string name="menu">MENU</string>

    <string name="map_description">Area map</string>

</resources>
