<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_north_atlantic">

        <Button
            android:id="@+id/region1"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/natlantic"
            android:text="@string/natlantic" />

        <Button
            android:id="@+id/region2"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/tropatlantic"
            android:text="@string/tropatlantic" />

        <Button
            android:id="@+id/region3"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/transatlantic"
            android:text="@string/transatlantic" />

        <Button
            android:id="@+id/region4"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/arc"
            android:text="@string/stransat" />

        <Button
            android:id="@+id/region5"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/medtocarib"
            android:text="@string/medtocarib" />

        <Button
            android:id="@+id/region6"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/azores"
            android:text="@string/azores" />

        <Button
            android:id="@+id/region7"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/neurope"
            android:text="@string/neurope" />

        <Button
            android:id="@+id/region8"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/baltic"
            android:text="@string/baltic" />

        <Button
            android:id="@+id/region9"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/northsea"
            android:text="@string/northsea" />

        <Button
            android:id="@+id/region10"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/britisles"
            android:text="@string/britisles" />

        <Button
            android:id="@+id/region11"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/fastnet"
            android:text="@string/IreltoEngl" />

        <Button
            android:id="@+id/region12"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/engchannel"
            android:text="@string/engchannel" />

        <Button
            android:id="@+id/region13"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/biscay"
            android:text="@string/biscay" />

        <Button
            android:id="@+id/region14"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/gibraltar"
            android:text="@string/gibraltar" />

        <Button
            android:id="@+id/region15"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/tarifa"
            android:text="@string/straitgbt" />

        <Button
            android:id="@+id/region16"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/canaries"
            android:text="@string/canary" />

        <Button
            android:id="@+id/region17"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/labrador"
            android:text="@string/labrador" />

        <Button
            android:id="@+id/region18"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/novascotia"
            android:text="@string/novascotia" />

        <Button
            android:id="@+id/region19"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/newengland"
            android:text="@string/newengland" />

        <Button
            android:id="@+id/region20"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/chesdel"
            android:text="@string/chesdel" />

        <Button
            android:id="@+id/region21"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/hatteras"
            android:text="@string/hatteras" />

        <Button
            android:id="@+id/region22"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/bermuda"
            android:text="@string/nportober" />

        <Button
            android:id="@+id/region23"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/westindies"
            android:text="@string/bertoind" />

        <Button
            android:id="@+id/region24"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/florida"
            android:text="@string/sflor" />

        <Button
            android:id="@+id/region25"
            style="@style/NavRegionButton"
            android:drawableLeft="@drawable/gulfmexico"
            android:text="@string/gulfmex" />

        <Button
            android:id="@+id/option11"
            style="@style/NavOptionButton"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/greatlakes"
            android:text="@string/greatlks" />
    </LinearLayout>
</ScrollView>
