<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/play"
        android:title="@string/play"
        />
    <item
        android:id="@+id/wind"
        android:title="@string/wind"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/pressure"
        android:title="@string/pressure"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/waves"
        android:title="@string/waves"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/visibility"
        android:title="@string/visibility"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/precipitation"
        android:title="@string/precipitation"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/clouds"
        android:title="@string/clouds"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        />
</menu>