<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_south_pacific"
        >

        <Button
            android:id="@+id/region1"
            android:text="@string/spacific"
            android:drawableLeft="@drawable/spacific"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region2"
            android:text="@string/amertopol"
            android:drawableLeft="@drawable/tahiti"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region3"
            android:text="@string/pantogala"
            android:drawableLeft="@drawable/galapagos"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region4"
            android:text="@string/oceania"
            android:drawableLeft="@drawable/oceania"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region5"
            android:text="@string/fijtomarq"
            android:drawableLeft="@drawable/marquesas"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region6"
            android:text="@string/austcoral"
            android:drawableLeft="@drawable/coralsea"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region7"
            android:text="@string/seaust"
            android:drawableLeft="@drawable/hobart"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region8"
            android:text="@string/swaust"
            android:drawableLeft="@drawable/leeuwin"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region9"
            android:text="@string/tasman"
            android:drawableLeft="@drawable/tasman"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region10"
            android:text="@string/newzealand"
            android:drawableLeft="@drawable/newzealand"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region11"
            android:text="@string/drakepass"
            android:drawableLeft="@drawable/capehorn"
            style="@style/NavRegionButton"
            />

    </LinearLayout>
</ScrollView>
