<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_west_indies"
        >

        <Button
            android:id="@+id/region1"
            android:text="@string/bertoind"
            android:drawableLeft="@drawable/westindies"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region2"
            android:text="@string/sflorida"
            android:drawableLeft="@drawable/florida"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region3"
            android:text="@string/flortoind"
            android:drawableLeft="@drawable/bahamas"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region4"
            android:text="@string/gulfmex"
            android:drawableLeft="@drawable/gulfmexico"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region5"
            android:text="@string/caribsea"
            android:drawableLeft="@drawable/caribbean"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region6"
            android:text="@string/virgtodom"
            android:drawableLeft="@drawable/carib600"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region7"
            android:text="@string/leeward"
            android:drawableLeft="@drawable/leeward"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region8"
            android:text="@string/windw"
            android:drawableLeft="@drawable/windward"
            style="@style/NavRegionButton"
            />
        <Button
            android:id="@+id/region9"
            android:text="@string/appnma"
            android:drawableLeft="@drawable/panama"
            style="@style/NavRegionButton"
            />

    </LinearLayout>
</ScrollView>
