<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_var_menu"
    android:orientation="vertical"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:alpha="0.7"
    android:gravity="center_vertical"
    >

    <Button
        android:id="@+id/bt_var_wind"
        tools:text="@string/wind"
        tools:drawableLeft="@drawable/ic_wind"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/bt_var_pressure"
        tools:text="@string/pressure"
        tools:drawableLeft="@drawable/ic_thermometer"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/bt_var_waves"
        tools:text="@string/waves"
        tools:drawableLeft="@drawable/ic_waves"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/bt_var_visibility"
        tools:text="@string/visibility"
        tools:drawableLeft="@drawable/ic_visibility"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/bt_var_precipitation"
        tools:text="@string/precipitation"
        tools:drawableLeft="@drawable/ic_precipitation"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/bt_var_clouds"
        tools:text="@string/clouds"
        tools:drawableLeft="@drawable/ic_cloud_cover"
        android:background="@color/colorPrimaryLight"
        android:paddingLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>